Bugfix on collapse and added Twitter and Github on team

--- a/style/design.css
+++ b/style/design.css
@@ -318,8 +318,18 @@ form {
 
 }
 
-.trombiElement img{
+.trombiElement .img-circle{
 	margin-top: -75px;
 	margin-bottom: 20px;
 	width: 150px;
+}
+
+.trombiElement > .trombiSocial {
+	text-align: center;
+}
+
+.trombiElement > .trombiSocial > a > img {
+	display: inline-block;
+	margin: 5px 15px 0 15px;
+	width: 25px;
 }
